# multicam-pose-and-face-tracking

./: .gitignore  LICENSE  README.md  client.py  face_tracker.py  host.py  main.py  multi_tracking.py  multi_tracking_pose.py  pose_tracker.py  pyproject.toml  sender.py  test.py
